Update custom prompt path in AI moderator workflow
Signed-off-by: Violet Hansen <spynetgirl@outlook.com>

--- a/.github/workflows/ai-moderator.yml
+++ b/.github/workflows/ai-moderator.yml
@@ -28,4 +28,4 @@ jobs:
           enable-spam-detection: true
           enable-link-spam-detection: true
           enable-ai-detection: true
-          # custom-prompt-path: '.github/prompts/my-custom.prompt.yml'  # Optional
+          custom-prompt-path: '.github/prompts/Custom-Prompt-For-AI-Moderator-Workflow.prompt.yml'
