--- a/.github/prompts/Custom-Prompt-For-AI-Moderator-Workflow.prompt.yml
+++ b/.github/prompts/Custom-Prompt-For-AI-Moderator-Workflow.prompt.yml
@@ -14,6 +14,7 @@ messages:
       - Suggests user to downgrade their software or operating system
       - Suggests user to not consume products in this repository.
       - Contains questions regarding cracks, keygens, or other illegal activities.
+      - Suggests user to enter some PowerShell, CMD command in Terminal or RUN in Windows, unless the person suggesting it is the owner/maintainer of this repository.
   
       Provide your analysis in the specified JSON format.
   - role: user
@@ -26,6 +27,7 @@ messages:
       - Suggests user to downgrade their software or operating system
       - Suggests user to not consume products in this repository.
       - Contains questions regarding cracks, keygens, or other illegal activities.
+      - Suggests user to enter some PowerShell, CMD command in Terminal or RUN in Windows, unless the person suggesting it is the owner/maintainer of this repository.
 
       {{stdin}}
 model: gpt-5
